# QUEQSolver

./: .gitignore  LICENSE  README.md  calcStep.py  package.txt  plotQE.py  pydantic_check.py  pyproject.toml  pytest.ksh  qesolver.py  requirements.txt  test.py  test.txt  test2.txt  test3.txt  values.txt  values2.txt
.github/workflows/: workflow2  workflow2.yml  workflow_01.txt  workflow_01.yml
.github/workflows/workflows/: workflow_01.yml
QUEQSolver/: calcStep.py  plotQE.py  qesolver.py  setup.py  values3.txt
docs/source/: .conf.py.swp  .index.rst.swp  .qesolver.rst.swp  calcStep.rst  conf.py  examples.rst  index.rst  install.rst  plotQE.rst  qesolver.rst
docs/source/notebooks/: QUEQSolver.ipynb
test/: test_calcStep.py  test_plotQE.py  test_qesolver.py
