[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QUEQSolver"
version = "1.0.0"
description = "Solve and plot quadratic equations"
authors = [{name = "josef223", email = "info@wetterstationwien22.at"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
homepage = "https://wetterwien22.at/projekte/QUEQSolver"
repository = "https://example.com/my_project/repo"
documentation = "https://wetterwien22.at/projekte/QUEQSolver"

[tool.setuptools]
packages = ["QUEQSolver"]
