[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QUEQSolver"
version = "1.0.0"
description = "Quadratic equation solver that prints out all steps to solve and plotting"
authors = [{name = "josef223", email = "info@wetterstationwien22.at"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
homepage = "https://wetterwien22.at/projekte/QUEQSolver"
repository = "https://github.com/josef223/QUEQSolver"
documentation = "https://wetterwien22.at/projekte/QUEQSolver"

[tool.setuptools]
packages = ["QUEQSolver"]
